# sql-agent

./: main.py  pyproject.toml
src/: agent.py  main.py
